# anki-pipeline

./: .env.example  .gitignore  README.md  mise.toml  pyproject.toml
launchd/: com.user.anki-pipeline.plist.template  install.sh
src/anki_pipeline/: __main__.py  anki_writer.py  config.py  storage.py  sync.py
src/anki_pipeline/density/: stats.py
src/anki_pipeline/gtrans/: processor.py  scraper.py  selectors.json
src/anki_pipeline/report/: sheets.py  slack.py
